Completed user management system with role-based auth